--- a/web-ingles/index.html
+++ b/web-ingles/index.html
@@ -1,170 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- encabezado -->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                <div class="d-flex justify-content-center">
-                    <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">PC Tower Case</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Manolo comes to our store with a problem, he needs a PC Tower Case.</h2>
-                    </div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="RoyalAccess - High Level Social Network" />
+    <meta name="author" content="" />
+    <title>RoyalAccess - High Level Social Network</title>
+    <link rel="icon" type="image/x-icon" href="https://example.com/favicon.ico" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+<body id="page-top">
+    <header class="masthead">
+        <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+            <div class="d-flex justify-content-center">
+                <div class="text-center">
+                    <h1 class="mx-auto my-0 text-uppercase">RoyalAccess</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">The Exclusive High-Level Social Network</h2>
                 </div>
             </div>
-        </header>
-        <!-- About-->
-        <section class="about-section text-center" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Manolo´s Problem</h2>
-                        <p class="text-white-50">Manolo come´s to our store with one wish, he want´s a minimalistic 
-                            computer case to his computer, we said to Manolo that we can search the best computer case 
-                            in the world but we need gave us the specification that he need to the case.
-                        </p>
-                    </div>
+        </div>
+    </header>
+    <section class="about-section text-center" id="about">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-lg-8">
+                    <h2 class="text-white mb-4">Exclusive Access</h2>
+                    <p class="text-white-50">RoyalAccess is a private social network designed for individuals of the highest standing to interact. To join, you need an invitation from a registered user. Once your account is created and verified, our professional team will assess your eligibility to access the safest social network in the world.</p>
                 </div>
-                <img class="img-fluid" src="assets/img/placa.png" alt="..." /> 
             </div>
-        </section>
-                <!-- Project Two Row-->
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/carga.gif" alt="..." /></div> <!--gif BUSCANDO-->
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Searching Process...</h4>
-                                    <p class="mb-0 text-white-50">We start searching on the stock of our brands products</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project One Row-->
-                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/cajaf.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Resolution</h4>
-                                    <p class="mb-0 text-white-50">Take in consider Manolo conditions we thought that the best case is the <b>"Tempest Mirage RGB Mes"</b>.</p>
-                                    <h4>Characteristics:</h4>
-                                    <table>
-                                        <tr>
-                                            <td>Weight</td>
-                                            <td>4.9 Kg</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Made by</td>
-                                            <td><ul>
-                                                <li>Metal</li>
-                                                <li>Glass</li>
-                                            </ul></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Frontal Panel</td>
-                                            <td><ul>
-                                                <li>Usb 3.0 x2</li>
-                                                <li>sound card</li>
-                                                <li>Switch button</li>
-                                                <li>Reset button</li>
-                                            </ul></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Size</td>
-                                            <td>ATX</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project Two Row-->
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/qr.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Scan to see</h4>
-                                    <p class="mb-0 text-white-50">If you scan this QR code you can see the PC Tower Case in your setup.</p>
-                                </div>
+            <img class="img-fluid" style="width: 50%;" src="./assets/img/logo.png" alt="RoyalAccess Logo" />
+        </div>
+    </section>
+    <section class="process-section">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid" src="./assets/img/check.jpg" alt="Verification Process" /></div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">Verification Process...</h4>
+                                <p class="mb-0 text-white-50">Begin your journey to join RoyalAccess by entering your invitation details at <a href="https://www.royalaccess.lux/tryAccess" class="text-white">royalaccess.lux/tryAccess</a>. Once verified, upload your information, profile photos, and a short verification video. Our professional team will review your application to ensure authenticity.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Contact-->
-        <section class="contact-section bg-black">
-            <div class="container px-4 px-lg-5 bg-black">
-                <div class="row gx-4 gx-lg-5 agrupart">
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100 tarjetas">
-                            <div class="card-body text-center tarjetas">
-                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small">4923 PC Power Solutions, Orlando FL</div>
+            <div style="margin-bottom: 10%;" class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid" style="width: 120%;" src="./assets/img/exclusive.jpg" alt="Ruby Box" /></div>
+                <div class="col-lg-6">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-left">
+                                <h4 class="text-white">Exclusive Experience</h4>
+                                <p class="mb-0 text-white-50">Upon successful verification, you will receive a Ruby Box containing documentation and a technician will install our network on your devices, including a custom mobile phone with our private OS.</p>
+                                <h4>Features:</h4>
+                                <table>
+                                    <tr>
+                                        <td>Privacy</td>
+                                        <td>Top-notch security and privacy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Exclusive Devices</td>
+                                        <td><ul>
+                                            <li>Custom mobile phone</li>
+                                            <li>Private OS</li>
+                                        </ul></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Special Offers</td>
+                                        <td><ul>
+                                            <li>Exclusive services and offers</li>
+                                        </ul></td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100 tarjetas">
-                            <div class="card-body text-center tarjetas">
-                                <i class="fas fa-envelope text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Email</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small"><a href="#!">info@pcpowersolutions.com</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100 tarjetas">
-                            <div class="card-body text-center tarjetas">
-                                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small">+1 (555) 902-8832</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
-        </section>
-        <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Website 2024</div></footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+            <div class="row gx-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid" src="assets/img/qrcode.jpg" alt="QR Code" /></div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">Scan to Join</h4>
+                                <p class="mb-0 text-white-50">Scan this QR code to begin your RoyalAccess registration process and experience the exclusive high-level social network.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact-->
+    <section class="contact-section bg-black">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 agrupart">
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">Address</h4>
+                            <hr class="my-4 mx-auto" />
+                            <div class="small">1234 RoyalAccess Lane, Luxury City</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fas fa-envelope text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">Email</h4>
+                            <hr class="my-4 mx-auto" />
+                            <div class="small"><a href="mailto:info@royalaccess.lux">info@royalaccess.lux</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">Phone</h4>
+                            <hr class="my-4 mx-auto" />
+                            <div class="small">+123 (456) 789-1011</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="social d-flex justify-content-center">
+                <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; RoyalAccess 2025</div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+</body>
 </html>
